# urban-commuter

./: README.md  pyproject.toml
analysis/: .~lock.corridors_analysis.csv#  centrality_analysis.csv  combined.odp  community_statistics.csv  node_community_mapping.csv  raw_observations_grid.csv  shortest_paths_from_source.csv  shortest_paths_from_source.pkl  top_10_communities_report.txt
config/: day_classification.yaml
scripts/: analyze_commuter_network.py  analyze_edge_weights.py  analyze_weekday_cycle.py  build_commute_graphs.py  build_commute_graphs_v2.py  fast_network_analysis.py  identify_anomalous_days.py  identify_commuter_routes.py  identify_weekends.py  inspect_temporal_patterns.py  plot_commuter_routes_histogram.py  plot_raw_observations_logscale.py  prune_commuter_routes.py  prune_graphs.py  run_pipeline.py  shortest_commute_paths.py  verify_weekday_mapping.py  visualize_commute_graphs.py  visualize_commuter_routes_nodes.py  visualize_pruned_commuter_routes_heatmap.py  visualize_pruned_graphs.py
src/: __init__.py  data_loader.py  preprocessing.py
